cambios en las imagenes

--- a/public/home.html
+++ b/public/home.html
@@ -59,25 +59,25 @@
         <div id="this-carousel-id" class="carousel slide hidden-xs"><!-- class of slide for animation -->
           <div class="carousel-inner">
             <div class="item active"><!-- class of active since it's the first item -->
-              <img src="img/comida.jpg" alt="alimento" />
+              <img src="img/1200x480/comida.jpg" alt="alimento" />
               <div class="carousel-caption">
                 <p>Alimentos</p>
               </div>
             </div>
             <div class="item">
-              <img src="img/juguete.jpg" alt="juguete" />
+              <img src="img/1200x480/juguete.jpg" alt="juguete" />
               <div class="carousel-caption">
                 <p>Juguetes</p>
               </div>
             </div>
             <div class="item">
-              <img src="img/peluche.jpg" alt="peluche" />
+              <img src="img/1200x480/peluche.jpg" alt="peluche" />
               <div class="carousel-caption">
                 <p>Peluches</p>
               </div>
             </div>
             <div class="item">
-              <img src="img/ropa.jpg" alt="ropa" />
+              <img src="img/1200x480/ropa.jpg" alt="ropa" />
               <div class="carousel-caption">
                 <p>Ropa</p>
               </div>
