agrego margen top para que no quede pegado arriba el css

--- a/public/juguetes.html
+++ b/public/juguetes.html
@@ -139,7 +139,7 @@
                 <span class="btn btn-default">Mas</span>
               </div>
               <div class="col-md-3 col-sm-6 post">
-                 <a href="juguetes-html" class="thumbnail"><img src="img/500x500/juguetemin.jpg" alt="" /></a>
+                 <a href="juguetes.html" class="thumbnail"><img src="img/500x500/juguetemin.jpg" alt="" /></a>
                 <h2>Juguetes</h2><p>Para el desarrollo de tu mascota es muy importante enseñarle a jugar con juguetes de perros. Jugar con tu perro no significa una lucha cuerpo a cuerpo o dejarle morder todo lo que quiera (eso solo sirve para estimular su agresividad).</p>
                 <span class="btn btn-default">Mas</span>
               </div>
