--- a/public/index.html
+++ b/public/index.html
@@ -94,44 +94,9 @@
             
             <div class="row">
               <div class="col-md-12">
-                <h1>¿Cómo jugar con nuestra mascota?</h1>
-                	<p class="lead">
-                		Para su desarrollo es muy importante enseñarle a jugar con juguetes de perros. Jugar con tu perro no significa una lucha cuerpo a cuerpo o dejarle morder todo lo que quiera (eso solo sirve para estimular su agresividad).
-						</p>  
-						<h3>¿Que es un juguete conveniente para mi perro?</h3>
-						<p class="lead">
-						Los juguetes de perros tienen que ser objetos no tóxicos, lo bastante grandes para que no pueda tragarlos, sin piezas que se puedan desprender (tipo cascabeles, pompones, etc.), que no puedan astillarse (como los palos) y que no se puedan comer(numerosos perros se acaban comiendo los palos y las piñas).
-
-						En cuanto un juguete de perro se empiece a romper hay que retirarlo.
-
-						El perro debe poder diferenciar entre qué objetos le están prohibidos y los que puede morder. Así no le des zapatos viejos (o ropa etc.) para que juegue ya que seria imposible que comprenda que no puede jugar con todos los zapatos de la casa.
-
-						En tiendas especializadas se venden infinidades de juguetes de perros adecuados para él (pelota, juguete de goma etc.).
-						</p>  
-						<h3>Cachorro morderdor</h3>
-						<p class="lead">
-						Para un cachorro, morder es natural. Al principio puede intentar morder tus manos en vez del juguete.
-
-						¿Que hacer en ese caso?
-
-						Mantener la mano que este mordisqueando quieta ycerrar el puño para que le sea más difícil morderlo y luego intentar distraerlo con un juguete. Pronto aprenderá que morder objetos es más divertido. Para más información sobre la educación de cachorros, pulsa aquí.
-						</p>  	
-						<h3>Algunos consejos útiles</h3>
-						<p class="lead">
-						Para evitar el aburrimiento, conviene tener varios juguetes de perros y variar entre ellos retirando unos y dándole otros.
-
-						Hay que saber que varias cortas sesiones de juegos son preferibles a una larga.
-
-						Y que al finalizar cada sesión hay que guardar el objetoy no dejárselo al perro para que este no se aburra de él y que cuando lo vea tenga ganas de jugar otra vez con él.
-
-						¿Que hacer cuando el perro "escoge un juguete" que le pueda hacer daño (tipo palo o piedra)? No prestarleatención, rápidamente aprenderá que los juguetes que tú escojes son más divertidos.
-
-						Hay que jugar cuando el perro se porte bien y no al revés ya que si el perro se da cuenta que sacas los juguetes para entretenerlo cuando se porta mal le estarás enviando un mensaje erróneo y su conducta empeorará.
-
-						Si el perro es muy bruto jugando o muerde con demasiada fuerza hay que interrumpir el juego de inmediato y pronto entenderá que esa conducta no es tolerada.
-                		</p>  
+                <h1>PGM - Bienestar para su mascota</h1><p class="lead">En PGM Mi Pequeña Gran Mascota tenemos todo lo necesario para el bienestar de su mascota. Con amor por los animales deseamos brindarle todos los productos y servicios necesarios para que nuestros pequeños grandes amiguitos disfruten de su vida junto a nosotros.</p>  
               </div>
-            </div> 
+            </div>
             <div class="row">
               <div class="col-md-3 col-sm-6 post">
                  <a href="alimentos.html" class="thumbnail"><img src="img/500x500/alimento.jpg" alt="" /></a>
@@ -153,7 +118,7 @@
                 <h2>Ropa</h2><p>Unos lo hacen por estética, porque les gusta que su perro vaya elegante, otras personas son reacias a abrigarlos porque piensan que con el pelo que tienen es suficiente para que estos no sufran con los cambios de tiempo, pero cuando realmente nuestro perro está acostumbrado a llevar una vida dentro del hogar, sin pasar frío, sin mojarse.</p>
                 <a href="ropa.html" class="btn btn-default" role="button">Mas</a>
               </div>
-            </div>                    
+            </div>    
           </div>
         </div>
       </div>
