--- a/public/ropa.html
+++ b/public/ropa.html
@@ -100,25 +100,25 @@
             <div class="row">
               <div class="col-md-3 col-sm-6 post">
                  <a href="alimentos.html" class="thumbnail"><img src="img/500x500/alimento.jpg" alt="" /></a>
-                <h2>Alimentos</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam totam dolore facere nulla similique magni nobis beatae eveniet deserunt quisquam nihil autem. Maxime iste voluptate laboriosam veritatis possimus qui molestias numquam officia deleniti a! Debitis itaque tempora vel quas quidem natus fugit alias aliquam maiores deserunt quibusdam error laboriosam aut.</p>
-                <span class="btn btn-default">Mas</span>
+                <h2>Alimentos</h2><p>Los alimentos para mascotas deben ser completos y balanceados, y poseer todos los requerimientos nutricionales necesarios para que los animales sean alimentados, en forma equilibrada, durante las distintas etapas de su vida.</p>
+                <a href="alimentos.html" class="btn btn-default" role="button">Mas</a>
               </div>
               <div class="col-md-3 col-sm-6 post">
                  <a href="juguetes.html" class="thumbnail"><img src="img/500x500/juguetemin.jpg" alt="" /></a>
                 <h2>Juguetes</h2><p>Para el desarrollo de tu mascota es muy importante enseñarle a jugar con juguetes de perros. Jugar con tu perro no significa una lucha cuerpo a cuerpo o dejarle morder todo lo que quiera (eso solo sirve para estimular su agresividad).</p>
-                <span class="btn btn-default">Mas</span>
+                <a href="juguetes.html" class="btn btn-default" role="button">Mas</a>
               </div>
               <div class="col-md-3 col-sm-6 post">
                  <a href="peluches.html" class="thumbnail"><img src="img/500x500/peluche2.jpg" alt="" /></a>
-                <h2>Peluches</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam totam dolore facere nulla similique magni nobis beatae eveniet deserunt quisquam nihil autem. Maxime iste voluptate laboriosam veritatis possimus qui molestias numquam officia deleniti a! Debitis itaque tempora vel quas quidem natus fugit alias aliquam maiores deserunt quibusdam error laboriosam aut.</p>
-                <span class="btn btn-default">Mas</span>
+                <h2>Peluches</h2><p>Para los cariñosos, para los incansables! Muñecos, pelotas ideal para los juegos de recuperación y los perros activos a los que les gusta cazar su juguete.</p>
+                <a href="peluches.html" class="btn btn-default" role="button">Mas</a>
               </div>
               <div class="col-md-3 col-sm-6 post">
                  <a href="ropa.html" class="thumbnail"><img src="img/500x500/ropa2.jpg" alt="" /></a>
                 <h2>Ropa</h2><p>Unos lo hacen por estética, porque les gusta que su perro vaya elegante, otras personas son reacias a abrigarlos porque piensan que con el pelo que tienen es suficiente para que estos no sufran con los cambios de tiempo, pero cuando realmente nuestro perro está acostumbrado a llevar una vida dentro del hogar, sin pasar frío, sin mojarse.</p>
-                <span class="btn btn-default">Mas</span>
+                <a href="ropa.html" class="btn btn-default" role="button">Mas</a>
               </div>
-            </div>                  
+            </div>                    
           </div>
         </div>
       </div>
